# scripts

./: .env.example  .gitignore  check-email-for-spam.js  pyproject.toml
docs/: csv_formats.md
src/coldmail/: __main__.py  cli.py  config.py  db.py  ingest.py  models.py  spam_check.py  upload.py  verify.py
tests/: test_db.py  test_ingest.py  test_spam_check.py  test_upload.py  test_verify.py
tests/fixtures/: bad_rows.csv  discolike.csv  generic.csv  ocean.csv  prospeo.csv
